--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-screens": "^2.17.1",
     "react-native-tailwindcss": "^1.1.11",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
