expo working alongside non-expo react native project

--- a/app.json
+++ b/app.json
@@ -1,4 +1,8 @@
 {
   "name": "icacoe",
-  "displayName": "icacoe"
+  "displayName": "icacoe",
+  "expo": {
+    "name": "Icacoe",
+    "slug": "icacoe"
+  }
 }
