--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "icacoe",
   "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
+    "start:expo": "expo start",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -13,6 +14,8 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "expo": "^40.0.1",
+    "expo-status-bar": "^1.0.3",
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
@@ -20,6 +23,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-tailwindcss": "^1.1.11",
+    "react-native-unimodules": "^0.12.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
