--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest",
     "lint": "eslint ."
   },
+  "resolutions": {
+    "node-notifier": "^8.0.1",
+    "node-fetch": "^2.6.1"
+  },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
